# libpoly

./: .cproject  .gitignore  .project  .pydevproject  .travis.yml  CMakeLists.txt  INSTALL  README.cygwin  README.md  README.mingw  index.html  libpoly-analyze  params.json
.circleci/: config.yml
.externalToolBuilders/: CMake.launch
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yml
cmake/: x86_64-w64-mingw32.cmake
debian/: changelog  clean  control  copyright  libpoly-dev.install  libpoly-dev.install.in  libpoly0.install  libpoly0.install.in  libpoly0.symbols  rules
examples/cad/: SMT 2017 (CAD).ipynb  SMT 2017 (Intro).ipynb  SMT 2017 (Sign Table).ipynb  cad.py  plot.py  sign_table.py
include/: CMakeLists.txt  algebraic_number.h  assignment.h  debug_trace.h  dyadic_interval.h  dyadic_rational.h  feasibility_set.h  feasibility_set_int.h  integer.h  interval.h  monomial.h  output_language.h  poly.h  polynomial.h  polynomial_context.h  polynomial_hash_set.h  polynomial_heap.h  polynomial_vector.h  polyxx.h  rational.h  rational_interval.h  sign_condition.h  statistics.h  upolynomial.h  upolynomial_factors.h  value.h  variable.h  variable_db.h  variable_list.h  variable_order.h  version.h.in
include/polyxx/: algebraic_number.h  assignment.h  context.h  dyadic_interval.h  dyadic_rational.h  integer.h  integer_ring.h  interval.h  interval_assignment.h  polynomial.h  polynomial_utils.h  rational.h  rational_interval.h  sign_condition.h  upolynomial.h  upolynomial_roots.h  utils.h  value.h  variable.h
python/: AlgebraicNumber.c  AlgebraicNumber.h  Assignment.c  Assignment.h  CMakeLists.txt  FeasibilitySet.c  FeasibilitySet.h  Integer.c  Integer.h  Interval.c  Interval.h  Polynomial.c  Polynomial.h  UPolynomial.c  UPolynomial.h  Value.c  Value.h  Variable.c  Variable.h  VariableOrder.c  VariableOrder.h  polypy.c  polypy2.c  polypy3.c  polypyAlgebraicNumber.c  polypyAlgebraicNumber.h  polypyAlgebraicNumber2.c  polypyAlgebraicNumber3.c  polypyAssignment.c  polypyAssignment.h  polypyAssignment3.c  polypyFeasibilitySet.c  polypyFeasibilitySet.h  polypyFeasibilitySet2.c  polypyFeasibilitySet3.c  polypyInteger.c  polypyInteger.h  polypyInteger2.c  polypyInteger3.c  polypyInterval.c  (+32 more)
scripts/: libpoly-submit  mingw32.deps.sh  osx.deps.sh  toolchain-mingw32.cmake  toolchain-mingw64-cross-compile.cmake  toolchain-mingw64.cmake  ubuntu.deps.sh
src/: CMakeLists.txt  poly.c
src/interval/: CMakeLists.txt  arithmetic.c  arithmetic.h  internal.c  interval.c  interval.h  interval_internal.c  interval_internal.h
src/number/: CMakeLists.txt  algebraic_number.c  algebraic_number.h  dyadic_rational.c  dyadic_rational.h  dyadic_rational_internal.h  integer.c  integer.h  integer_internal.h  rational.c  rational.h  rational_internal.h  value.c  value.h
src/polynomial/: CMakeLists.txt  coefficient.c  coefficient.h  factorization.c  factorization.h  feasibility_set.c  feasibility_set.h  feasibility_set_int.c  feasibility_set_int.h  gcd.c  gcd.h  internal.c  monomial.c  monomial.h  output.c  output.h  polynomial.c  polynomial.h  polynomial_api.c  polynomial_context.c  polynomial_context.h  polynomial_hash_set.c  polynomial_heap.c  polynomial_internal.c  polynomial_internal.h  polynomial_vector.c  polynomial_vector.h  psc.c  subres.c
src/polyxx/: algebraic_number.cpp  assignment.cpp  context.cpp  dyadic_interval.cpp  dyadic_rational.cpp  integer.cpp  integer_ring.cpp  interval.cpp  interval_assignment.cpp  polynomial.cpp  polynomial_utils.cpp  rational.cpp  rational_interval.cpp  sign_condition.cpp  upolynomial.cpp  upolynomial_roots.cpp  utils.cpp  value.cpp  variable.cpp
src/upolynomial/: CMakeLists.txt  bounds.c  bounds.h  factorization.c  factorization.h  factors.c  factors.h  gcd.c  gcd.h  output.c  output.h  root_finding.c  root_finding.h  umonomial.c  umonomial.h  upolynomial.c  upolynomial.h  upolynomial_dense.c  upolynomial_dense.h  upolynomial_internal.c  upolynomial_internal.h  upolynomial_vector.c  upolynomial_vector.h
src/utils/: CMakeLists.txt  assignment.c  assignment.h  assignment_internal.c  assignment_internal.h  debug_trace.c  debug_trace.h  debug_trace_internal.h  hash.h  open_memstream.c  open_memstream.h  output.c  output.h  sign_condition.c  statistics.c  statistics.h  statistics_internal.h  u_memstream.c  u_memstream.h
src/variable/: CMakeLists.txt  variable.c  variable_db.c  variable_list.c  variable_order.c  variable_order.h
test/: .gitignore  CMakeLists.txt  check.py  polypy.launch  polypy_test.py  setup_python.sh
test/poly/: CMakeLists.txt  test_feasible_int_set.cpp
test/polyxx/: CMakeLists.txt  doctest.h  test_algebraic_number.cpp  test_assignment.cpp  test_context.cpp  test_dyadic_interval.cpp  test_dyadic_rational.cpp  test_integer.cpp  test_interval.cpp  test_interval_assignment.cpp  test_polynomial.cpp  test_rational.cpp  test_rational_interval.cpp  test_upolynomial.cpp  test_upolynomial_roots.cpp  test_value.cpp  test_variable.cpp
test/python/: CMakeLists.txt  algebraic_number.py  check.py  polynomial_arithmetic.py  polynomial_eval.py  polynomial_factorization.py  polynomial_feasibility.py  polynomial_gcd.py  polynomial_mgcd.py  polynomial_resultants.py  polynomial_roots.py  polynomial_sgn.py  polypy_test.py  upolynomial_factor.py  upolynomial_gcd.py  upolynomial_roots.py  variable.py
test/python/tests/: algebraic_number.py  polynomial_arithmetic.py  polynomial_eval.py  polynomial_feasibility.py  polynomial_resultants.py  polynomial_roots.py  upolynomial_factor.py  upolynomial_gcd.py  upolynomial_roots.py  value.py
